# Clause-AI

./: .gitignore  Cargo.toml  ENV_TEMPLATE.txt  README.md  index.html  styles.css
src/: env.rs  main.rs  server.rs
static/: script.js  styles.css
