[package]
name = "clause-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
google-generative-ai-rs = "0.2"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }

[default]
address = "0.0.0.0"
port = 8080